--- a/index.html
+++ b/index.html
@@ -1,53 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Win Wheel</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Gift Wheel</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
 
-<body>
-    <!--
-  project's structure
-  - svg for the color wheel (consisting of circle elements, and a group in which the slices are added)
-  - svg for the arrow pointing at the selected color (positioned to the right of the circle)
-  - heading in which to show the color selected through the wheel (hidden by default)
-  - container for the simple instructions and the button spinning the wheel
--->
+    <body>
 
-    <div class="wrapper">
-        <h1 class="isHidden"></h1>
-        <div class="wheel-area">
-            <svg id="wheel" viewBox="0 0 100 100">
-                <circle cx="50" cy="50" r="48" fill="none" stroke-width="1" stroke="currentColor" />
-                <!-- add an id to the underlying circle as this depicts the final slice, and as to add a random color -->
-                <circle id="slice" cx="50" cy="50" r="47" />
-                <g id="slices"></g>
-            </svg>
-            <svg id="pin" viewBox="0 0 50 50">
-                <path d="M 0 25 L 50 0 V 50" />
-            </svg>
-        </div>
-
-        <div class="instructions">
-            <div class="">
-                <div class="gift-value" color="FF0000">#FF0000</div>
-                <div class="gift-value" color="00FF00">#00FF00</div>
-                <div class="gift-value" color="0000FF">#0000FF</div>
-                <div class="gift-value" color="FFFF00">#FFFF00</div>
-                <div class="gift-value" color="FF00FF">#FF00FF</div>
-                <div class="gift-value" color="00FFFF">#00FFFF</div>
+        <div class="wrapper">
+            <h1 class="isHidden"></h1>
+            <div class="wheel-area">
+                <svg id="wheel" viewBox="0 0 100 100">
+                    <circle cx="50" cy="50" r="48" fill="none" stroke-width="1" stroke="currentColor"/>
+                    <circle id="slice" cx="50" cy="50" r="47"/>
+                    <g id="slices"></g>
+                </svg>
+                <svg id="pin" viewBox="0 0 50 50">
+                    <path d="M 0 25 L 50 0 V 50"/>
+                </svg>
             </div>
-            <button>Spin!</button>
+
+            <div class="instructions">
+                <div class="">
+                    <div class="gift-value" color="FF0000">#FF0000</div>
+                    <div class="gift-value" color="00FF00">#00FF00</div>
+                    <div class="gift-value" color="0000FF">#0000FF</div>
+                    <div class="gift-value" color="FFFF00">#FFFF00</div>
+                    <div class="gift-value" color="FF00FF">#FF00FF</div>
+                    <div class="gift-value" color="00FFFF">#00FFFF</div>
+                </div>
+                <button>Spin!</button>
+            </div>
 
         </div>
+    </body>
 
-    </div>
-</body>
-
-<script src="script.js"></script>
+    <script src="script.js"></script>
 
 </html>
