--- a/index.html
+++ b/index.html
@@ -14,30 +14,36 @@
 
         <div class="wrapper">
             <h1 class="isHidden"></h1>
+
+            <div class="instructions">
+                <div class="">
+                    <div class="gift-value" color="#ED6A80">50₺ SETCARD</div>
+                    <div class="gift-value" color="#3DBAE8">70₺ SETCARD</div>
+                    <div class="gift-value" color="#6A6AB1">100₺ STARBUCK HEDİYE KARTI</div>
+                    <div class="gift-value" color="#B5D568">120₺ MİGROS HEDİYE ÇEKİ</div>
+                    <div class="gift-value" color="#BD79B2">150₺ WATSONS HEDİYE ÇEKİ</div>
+                    <div class="gift-value" color="#FDE85F">KAFA İZNİ</div>
+                </div>
+            </div>
             <div class="wheel-area">
                 <svg id="wheel" viewBox="0 0 100 100">
                     <circle cx="50" cy="50" r="48" fill="none" stroke-width="1" stroke="currentColor"/>
                     <circle id="slice" cx="50" cy="50" r="47"/>
                     <g id="slices"></g>
                 </svg>
-                <svg id="pin" viewBox="0 0 50 50">
-                    <path d="M 0 25 L 50 0 V 50"/>
-                </svg>
-            </div>
-
-            <div class="instructions">
-                <div class="">
-                    <div class="gift-value" color="FF0000">#FF0000</div>
-                    <div class="gift-value" color="00FF00">#00FF00</div>
-                    <div class="gift-value" color="0000FF">#0000FF</div>
-                    <div class="gift-value" color="FFFF00">#FFFF00</div>
-                    <div class="gift-value" color="FF00FF">#FF00FF</div>
-                    <div class="gift-value" color="00FFFF">#00FFFF</div>
+                <div class="spin__button">
+                    <span>Spin!</span>
+                    <svg id="pin" viewBox="0 0 50 50">
+                        <path d="M 0 25 L 50 0 V 50"/>
+                    </svg>
                 </div>
-                <button>Spin!</button>
             </div>
 
         </div>
+
+        <audio controls>
+            <source src="spin.wav" type="audio/wav">
+        </audio>
     </body>
 
     <script src="script.js"></script>
