--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <div class="">
                     <div class="gift-value" color="#ED6A80">50₺ SETCARD</div>
                     <div class="gift-value" color="#3DBAE8">70₺ SETCARD</div>
-                    <div class="gift-value" color="#6A6AB1">100₺ STARBUCK HEDİYE KARTI</div>
+                    <div class="gift-value" color="#6A6AB1">100₺ STARBUCKS HEDİYE KARTI</div>
                     <div class="gift-value" color="#B5D568">120₺ MİGROS HEDİYE ÇEKİ</div>
                     <div class="gift-value" color="#BD79B2">150₺ WATSONS HEDİYE ÇEKİ</div>
                     <div class="gift-value" color="#FDE85F">KAFA İZNİ</div>
