appplause sound added.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
 
         <audio controls>
-            <source src="spin.wav" type="audio/wav">
+            <source type="audio/mp3"></source>
         </audio>
     </body>
 
